# iklo

./: .gitignore  AGENTS.md  AGENTS.old.md  Cargo.toml  LANGUAGE.md  LICENSE  LICENSE.md  Makefile  README.md  README.old.md  SPEC.md  apm.lock.yaml  apm.yml  mise.toml  opencode.jsonc  package-lock.json  settings.local.json  skills-lock.json  tour-iklo.md
.claude/: settings.json
.claude/skills/: turso-cloud
.codex/: config.toml
.github/: copilot-instructions.md
.specify/: init-options.json  integration.json
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
crates/iklo-ast/: Cargo.toml
crates/iklo-ast/src/: lib.rs
crates/iklo-cli/: Cargo.toml
crates/iklo-cli/src/: main.rs
crates/iklo-lexer/: Cargo.toml
crates/iklo-lexer/src/: lib.rs
crates/iklo-parser/: Cargo.toml  build.rs  grammar.lalrpop
crates/iklo-parser/src/: lib.rs  token.rs
crates/iklo-runtime/: Cargo.toml
crates/iklo-runtime/src/: lib.rs
crates/iklo-substrate/: Cargo.toml
crates/iklo-substrate-turso/: Cargo.toml
crates/iklo-substrate-turso/src/: codec.rs  lib.rs  schema.rs  substrate.rs  tests.rs
crates/iklo-substrate/src/: codec.rs  contract.rs  lib.rs  memory.rs
design/decisions/: ADR-0001-turso-vdbe-image-store.md
examples/: hello.iklo
examples/planned/: README.md  factorial.iklo
refs/: README.md  README.old.md  clock-calculus-summary.md  tour.old.iklo
refs/ucblogo/: summary.md  understanding-ucblogo-evaluator.md
spec/: README.md  SPEC.md
spec/decisions/: ADR-0001-substrate-boundary.md
spec/substrate/: SPEC.md
spec/tasks/: README.md  plan.md  todo.md
specs/: execution-queue.md  tech-debt.md
specs/001-substrate/: plan.md  spec.md  tasks.md
specs/002-ik0-grammar/: grammar.bnf  plan.md  spec.md  tasks.md
specs/003-repl-improvements/: plan.md  spec.md  tasks.md
specs/004-turso-substrate-backend/: plan.md  spec.md  tasks.md
specs/005-ci-release-versioning/: spec.md
specs/006-strictness-effects-spike/: spec.md
specs/007-ik1-core-language/: spec.md
specs/008-binding-model-taxonomy/: spec.md
specs/009-binding-kinds/: spec.md
specs/010-types-literals/: spec.md
specs/decisions/: ADR-0001-substrate-boundary.md  ADR-0002-cross-agent-supermemory.md  ADR-0003-queue-evaluation-exploration.md  ADR-0004-repl-slash-commands.md  ADR-0005-turso-fork-governance.md
tasks/: README.md
