[package]
name = "iklo-cli"
edition.workspace = true
version.workspace = true
license-file = "../../LICENSE"

[dependencies]
iklo-parser = { path = "../iklo-parser" }
iklo-runtime = { path = "../iklo-runtime" }
rustyline = { version = "18.0.0", features = ["derive"] }

[[bin]]
name = "iklo"
path = "src/main.rs"
