[package]
name = "iklo-parser"
edition.workspace = true
version.workspace = true
license-file = "../../LICENSE"

[dependencies]
iklo-ast = { path = "../iklo-ast" }
iklo-lexer = { path = "../iklo-lexer" }
lalrpop-util = { version = "0.22", features = ["lexer"] }

[build-dependencies]
lalrpop = "0.22"

[lib]
path = "src/lib.rs"
