[package]
name = "iklo-runtime"
edition.workspace = true
version.workspace = true
license-file = "../../LICENSE"

[dependencies]
iklo-ast = { path = "../iklo-ast" }
iklo-substrate = { path = "../iklo-substrate" }

[dev-dependencies]
iklo-parser = { path = "../iklo-parser" }

[lib]
path = "src/lib.rs"
