[package]
name = "iklo-substrate-turso"
edition.workspace = true
version.workspace = true
license-file = "../../LICENSE"

[dependencies]
iklo-substrate = { path = "../iklo-substrate" }

# Official embedded/in-process Turso Rust SDK; optional so default builds stay libSQL-free.
turso = { version = "0.7.0", optional = true }

[dev-dependencies]
# Not gated by the `turso` feature: dev-dependencies are only compiled for
# test builds, and the tests that actually use it are themselves
# `#[cfg(feature = "turso")]`-gated, so `cargo test --workspace` without
# `--features turso` is unaffected.
tokio = { version = "1", features = ["macros", "rt"] }

[features]
turso = ["dep:turso"]

[lib]
path = "src/lib.rs"
