[package]
name = "iklo-substrate-turso"
edition.workspace = true
version.workspace = true
license-file = "../../LICENSE"

[dependencies]
iklo-substrate = { path = "../iklo-substrate" }

# Official embedded/in-process Turso Rust SDK; optional so default builds stay libSQL-free.
turso = { version = "0.7.0", optional = true }

# Real (non-dev) dependency: `TursoSubstrate` owns and drives a tokio runtime to
# bridge this crate's synchronous Substrate/Transaction API onto turso's async
# client. Gated by the `turso` feature so default builds stay runtime-free.
# Features: `rt` for the current-thread runtime (one blocking call at a time, so
# no `rt-multi-thread`/`full` needed) and `time` for `tokio::time::sleep` in the
# commit retry/backoff loop.
tokio = { version = "1", features = ["rt", "time"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[features]
turso = ["dep:turso", "dep:tokio"]

[lib]
path = "src/lib.rs"
